# cnn

./: .gitignore  CMakeLists.txt  Makefile
include/: convolution_layer.h  hidden_layer.h  layer.h  link.h  matrix.h  network.h  neuron.h  size.h  softmax_layer.h  subsampling_layer.h  utils.h  weight.h
net/: init.m
net/set/: mu.txt  pics.m  trmx.txt
src/: convolution_layer.cpp  functions.hpp  hidden_layer.cpp  link.cpp  matrix.cpp  softmax_layer.cpp  subsampling_layer.cpp  utils.cpp  weight.cpp
tests/: cnn_test.cpp  simple_test.cpp  simpler_test.cpp  x.hpp
